@@ -9,10 +9,12 @@ To be addressed in 7.19.5 (planned release: May 2009)
       - awaiting patch rework/breakdown
 
 235 - #2784055, connect race with multi and socks proxy
+      Code adjustment for FTP over socks proxy remains
 
 236 - timeout in milliseconds doesn't seem to work
+      http://curl.haxx.se/mail/lib-2009-05/0021.html
 
-239 -
+240 - 
 
 To be addressed in 7.19.6 (planned release: July 2009)
 =========================
